turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:23: error: Any does not take parameters
    f(x(i)(1))
     ^